--- a/src/app/i18n/translations/en/results.json
+++ b/src/app/i18n/translations/en/results.json
@@ -1,3 +1,22 @@
 {
-    "1": "unoo"
+    "abnegation": {
+        "faction": "Abnegation",
+        "explanation": "You don't like to draw attention to yourself, and you are more concerned about other people's contentment than your own. You find joy and fulfillment in making other people happier, safer, and healthier. You believe that the world would be a better place if selfishness were not so widespread. Other people see you as somewhat difficult to get to know, but also as quiet and kind."
+    },
+    "amity": {
+        "faction": "Amity",
+        "explanation": "You are at peace when the people around you are getting along. You appreciate music and the arts, and it is easy to make you laugh. One of your goals is to find as much happiness as you can. You believe that aggression and hostility are to blame for most of the world's problems. Others see you as sometimes flaky or indecisive, but also as easygoing and warm."
+    },
+    "candor": {
+        "faction": "Candor",
+        "explanation": "You are honest with everyone, no matter how difficult it is, and no matter how much trouble it gets you into. You aren't easily offended, and would prefer to hear the truth even if it hurts. You believe that if everyone could be honest and forthright with each other, the world would be a much better place. Other people see you as sometimes insensitive, but also as trustworthy and confident."
+    },
+    "dauntless": {
+        "faction": "Dauntless",
+        "explanation": "You love a good adrenaline rush, and you don't let other people dictate your behavior. You do what you believe is right no matter how difficult or frightening it is. You believe that the world would be better off if people were not afraid to do what was necessary to make things right. Others see you as often abrasive, but also as strong and bold."
+    },
+    "erudite": {
+        "faction": "Erudite",
+        "explanation": "You enjoy learning new things, and you try to understand how everything works. You tend to make decisions based on logic rather than instinct or emotions. You believe the world would be a better place if everyone were well-educated and devoted to learning. Other people see you as sometimes condescending, but also as intelligent and insightful."
+    }
 }
