home redireciton added

--- a/src/app/i18n/translations/en/results.json
+++ b/src/app/i18n/translations/en/results.json
@@ -18,5 +18,6 @@
     "erudite": {
         "faction": "Erudite",
         "explanation": "You enjoy learning new things, and you try to understand how everything works. You tend to make decisions based on logic rather than instinct or emotions. You believe the world would be a better place if everyone were well-educated and devoted to learning. Other people see you as sometimes condescending, but also as intelligent and insightful."
-    }
+    },
+    "home": "Go Home Page"
 }
