--- a/src/app/i18n/translations/es/results.json
+++ b/src/app/i18n/translations/es/results.json
@@ -18,5 +18,6 @@
     "erudite": {
         "faction": "Erudición",
         "explanation": "Disfrutas aprendiendo cosas nuevas y tratas de entender cómo funciona todo. Tiendes a tomar decisiones basadas en la lógica en lugar del instinto o las emociones. Crees que el mundo sería un lugar mejor si todos estuvieran bien educados y dedicados al aprendizaje. Los demás te ven a veces como condescendiente, pero también como alguien inteligente e perspicaz."
-    }
+    },
+    "home": "Ir al inicio"
 }
